--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "karma-chrome-launcher": "^0.2.0",
     "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.6",
-    "karma-junit-reporter": "^0.3.4"
+    "karma-junit-reporter": "^0.3.4",
+    "karma-phantomjs-launcher":"^1.0.4"
   },
   "scripts": {
     "postinstall": "node node_modules/bower/bin/bower install",
